corrected some colours for dark mode

--- a/anay-portfolio/src/index.css
+++ b/anay-portfolio/src/index.css
@@ -17,10 +17,10 @@
   --black-color-light: #121212;
 
   /* Dark Theme Colors */
-  --grey-color-dark: #f0f0f0;
+  --grey-color-dark: #fffafc;
   --pink-color-dark: #ff9aad;
   --light-grey-color-dark: #ff9aad;
-  --white-color-dark: #121212;
+  --white-color-dark: #1c1c1c;;
   --black-color-dark: #fffafc;
 
   /* Default Theme */
